# MECTESIS

./: .gitignore  README.md  prueba.py  pyproject.toml  requirements.txt
chronos-2/: chronos-2-quickstart.ipynb  chronos2-guia-local.md  chronos2-test.ipynb
experiments/: expetiments.md
experiments/configs/: ar1_simple.yaml
mectesis/: __init__.py
mectesis/dgp/: __init__.py  adl_ecm_dgp.py  ar.py  ar_break.py  ar_trend.py  arimax_dgp.py  arma_general.py  base.py  ets_dgps.py  garch.py  gp_dgp.py  markov_switching.py  rw.py  seasonal.py  threshold_dgps.py  var_dgp.py  varx_dgp.py  vecm_dgp.py
mectesis/metrics/: __init__.py  decomposition.py
mectesis/models/: __init__.py  ardl_model.py  arima.py  arima_ext.py  base.py  chronos.py  (+11 more)
notebooks/: experimentos_covariados.ipynb  experimentos_gp.ipynb  experimentos_univariados.ipynb  experimentos_univariados_v3.ipynb  experimentos_univariados_v3_cloud.ipynb  experimentos_univariados_v4.ipynb  experimentos_univariados_v4_cloud.ipynb  setup_vertex.ipynb  validacion_ar1_arima.ipynb  validacipon_ar1_v2.ipynb
preliminar/: comparacion_metricas.md  conclusiones_covariados.md  conclusiones_gp.md  conclusiones_multivariados.md  conclusiones_univariados.md  dgp_experimentos.md  dgp_experimentos_covariados.md  dgp_experimentos_gp.md  dgp_experimentos_multivariados.md  metricas.md
scripts/: create_notebook_v3.py  create_notebook_v3_cloud.py  create_notebook_v4.py  create_notebook_v4_cloud.py  gen_notebook.py  gen_notebook_covariates.py  gen_notebook_gp.py  gen_notebook_multivariate.py  gen_notebook_tesis.py  run_experiment.py
(+4 files in other folders)
